[package]
name = "siin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trauma = "2"
tokio = "1.29.1"
reqwest = "0.11.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
validator = { version = "0.16", features = ["derive"] }